--- a/src/Telas/Server/Server.fxml
+++ b/src/Telas/Server/Server.fxml
@@ -96,17 +96,17 @@
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #005662;" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <children>
-                  <Label alignment="CENTER" layoutX="112.0" layoutY="237.0" text="TVChat" textAlignment="CENTER" textFill="WHITE">
+                  <Label alignment="CENTER" layoutX="115.0" layoutY="190.0" text="TVChat" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="Raleway" size="72.0" />
                      </font>
                   </Label>
-                  <Label alignment="CENTER" layoutX="155.0" layoutY="341.0" text="Preencha as opções" textAlignment="CENTER" textFill="WHITE">
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="154.0" layoutY="327.0" text="Preencha as opções" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="Raleway" size="18.0" />
                      </font>
                   </Label>
-                  <Label alignment="CENTER" layoutX="162.0" layoutY="391.0" text="Clieque em conectar" textAlignment="CENTER" textFill="WHITE">
+                  <Label alignment="CENTER" layoutX="157.0" layoutY="359.0" text="Clique em conectar" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="Raleway" size="18.0" />
                      </font>
