--- a/src/Telas/Chat/Chat.fxml
+++ b/src/Telas/Chat/Chat.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPane" prefHeight="478.0" prefWidth="802.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Telas.Chat.ChatController">
+<AnchorPane id="AnchorPane" prefHeight="478.0" prefWidth="802.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.131" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Telas.Chat.ChatController">
     <stylesheets>
         <URL value="@chat.css" />
     </stylesheets>
@@ -23,7 +23,7 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <SplitPane dividerPositions="0.5" style="-fx-border-color: #21477A; -fx-background-color: #21477A;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <SplitPane dividerPositions="0.2518796992481203" style="-fx-border-color: #21477A; -fx-background-color: #21477A;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <items>
                               <AnchorPane>
                                  <children>
@@ -32,39 +32,40 @@
                               </AnchorPane>
                               <AnchorPane>
                                  <children>
-                                    <GridPane prefHeight="400.0" prefWidth="236.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                      <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                      </columnConstraints>
-                                      <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                      </rowConstraints>
-                                       <children>
-                                          <AnchorPane GridPane.vgrow="ALWAYS">
+                                    <SplitPane dividerPositions="0.8422273781902552" orientation="VERTICAL" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                      <items>
+                                          <AnchorPane>
                                              <children>
                                                 <ListView fx:id="list_chat" prefHeight="200.0" prefWidth="242.0" stylesheets="@chat.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                                              </children>
                                           </AnchorPane>
-                                          <AnchorPane GridPane.rowIndex="1" GridPane.vgrow="SOMETIMES">
+                                          <AnchorPane>
                                              <children>
-                                                <GridPane layoutY="109.0" prefHeight="238.0" prefWidth="397.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                <GridPane layoutY="109.0" prefWidth="592.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                    <columnConstraints>
                                                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+                                                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" percentWidth="0.0" />
                                                    </columnConstraints>
                                                    <rowConstraints>
-                                                      <RowConstraints />
+                                                      <RowConstraints percentHeight="100.0" />
                                                    </rowConstraints>
                                                    <children>
-                                                      <Button fx:id="button_send" mnemonicParsing="false" style="-fx-background-color: #21477A;" text="ENVIAR" textFill="WHITE" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.vgrow="NEVER" />
-                                                      <TextArea fx:id="text_message" maxHeight="100.0" prefHeight="100.0" prefWidth="200.0" style="-fx-text-fill: white;" styleClass="textAreaFlat" stylesheets="@chat.css" text="&#10;" GridPane.hgrow="ALWAYS" GridPane.vgrow="NEVER" />
+                                                      <AnchorPane>
+                                                         <children>
+                                                            <TextArea fx:id="text_message" prefHeight="131.0" prefWidth="535.0" style="-fx-text-fill: white;" styleClass="textAreaFlat" stylesheets="@chat.css" text="&#10;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                         </children>
+                                                      </AnchorPane>
+                                                      <AnchorPane GridPane.columnIndex="1">
+                                                         <children>
+                                                            <Button fx:id="button_send" mnemonicParsing="false" style="-fx-background-color: #21477A;" text="ENVIAR" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                         </children>
+                                                      </AnchorPane>
                                                    </children>
                                                 </GridPane>
                                              </children>
                                           </AnchorPane>
-                                       </children>
-                                    </GridPane>
+                                      </items>
+                                    </SplitPane>
                                  </children>
                               </AnchorPane>
                            </items>
